css/modules/_overrides.scss
body {
  font-family: $font-family-sans-serif;
}

p {
  font-family: $font-family-serif;
}

a {
  color: $black;
  text-decoration: underline;

  &:active,
  &:focus {
    @extend a;
  }

  &:hover {
    color: $link-hover-color;
    @include transition(all .2s linear);
  }
}

.btn[disabled] {
  opacity: 1;
}

.row {
  margin: 0;
}

.form-control,
.form-control:focus {
  box-shadow: none;
  border: 0;
}

